# baup

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  _baup  backupTool  backupTool.sh  baup  exportFiles.sh  importFiles.sh  install.sh  prueba.sh  readme.html
"/home/imanol/.baup"espanso/config/: hx.yml
"/home/imanol/.baup"espanso/match/: _latex.yml
"/home/imanol/.baup"helix/: config.toml  languages.toml
"/home/imanol/.baup"qtile/scripts/: autostart.sh
"/home/imanol/.baup"rofi/: config.rasi
"/home/imanol/.baup"zathura/: zathurarc
"/home/imanol/.baup"zsh/: .zshrc
src/: args.rs  config.rs  import.rs  main.rs  utils.rs
src/commands/: edit_add_rem.rs  edit_clean.rs  git_diff.rs  import_export.rs
~/.baup/espanso/match/: base.yml
~/.baup/helix/: languages.toml
~/.baup/qtile/: colors.py  config.py
~/.baup/rofi/: config.rasi
~/.baup/system/: 30-touchpad.conf  logind.conf
