[package]
name = "baup"
version = "1.1.0"
edition = "2021"
authors = ["Imanol Ciganda"]
description = "Easy CLI tool for creating backups of files"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs_extra = "1.2"
expanduser = "1.2.2"
clap = { version = "4.4.16", features = ["derive"]}
colored = "2.1.0"
serde = { version = "1.0.195", features = ["derive"]}
toml = "0.8.8"
chrono = "0.4"
